Add scene Convergence Map and introduce time travel awareness
